--- a/items.html
+++ b/items.html
@@ -9,125 +9,134 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <style>
     :root {
-      --brand-red: #f12916;
-      --brand-yellow: #f4ff2a;
-      --accent-green: #30bc1a;
-      --text-dark: #111827;
-      --bg-light: #e6f0fb;
-      --card-white: #ffffff;
-      --muted-text: #888;
-      --border-light: rgba(14,19,26,0.08);
-      --radius-xl: 1.5rem;
-      --radius-lg: 0.75rem;
-      --transition: 0.28s cubic-bezier(0.2,0.8,0.4,1);
-      --shadow: 0 10px 20px -5px rgba(15,23,42,0.1), 0 4px 6px -2px rgba(15,23,42,0.05);
+      --bg-light: #f8f9fa;
+      --card-bg: #ffffff;
+      --text-dark: #212529;
+      --text-muted: #6c757d;
+      --brand-red: #dc3545;
+      --brand-yellow: #ffc107;
+      --accent-green: #28a745;
+      --shadow-sm: 0 4px 12px rgba(0,0,0,0.08);
+      --shadow-lg: 0 12px 30px rgba(0,0,0,0.12);
+      --radius-lg: 24px;
+      --radius-md: 16px;
+      --transition: 0.3s ease;
     }
-    * { box-sizing: border-box; margin:0; padding:0; }
-    body { font-family: 'Outfit', sans-serif; background: var(--bg-light); color: var(--text-dark); padding-bottom: 7.5rem; min-height: 100vh; }
-    header[role="banner"] {
-      display: flex; align-items: center; justify-content: space-between; gap: 1rem;
-      padding: 0.875rem 1.25rem; background: linear-gradient(135deg, var(--brand-red), #ff6b6b);
-      color: white; border-bottom-left-radius: var(--radius-xl); border-bottom-right-radius: var(--radius-xl);
-      box-shadow: var(--shadow); position: sticky; top: 0; z-index: 60;
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    body { font-family: 'Outfit', sans-serif; background: var(--bg-light); min-height: 100vh; padding-bottom: 100px; }
+    header {
+      background: white; padding: 1rem; box-shadow: var(--shadow-sm); position: sticky; top: 0; z-index: 10;
     }
-    .back-btn { background: transparent; border: 0; color: inherit; width: 2.25rem; height: 2.25rem;
-      border-radius: 50%; display: grid; place-items: center; cursor: pointer; }
-    .back-btn:hover { background: rgba(255,255,255,0.15); }
-    .title { font-weight: 800; font-size: 1.25rem; }
-    .shop-name { font-weight: 700; font-size: 0.9375rem; }
-    main { max-width: 75rem; margin: 2rem auto; padding: 0 1rem; }
-    .items-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 1.5rem; }
+    .header-top {
+      display: flex; align-items: center; justify-content: space-between; margin-bottom: 1rem;
+    }
+    .back-btn { background: none; border: none; font-size: 1.6rem; cursor: pointer; }
+    .icons { display: flex; gap: 1.5rem; }
+    .icon-btn { font-size: 1.4rem; color: var(--text-muted); cursor: pointer; }
+    .shop-title { font-size: 2rem; font-weight: 800; color: var(--text-dark); }
+    .hero-container {
+      margin: 1rem; border-radius: var(--radius-lg); overflow: hidden; box-shadow: var(--shadow-lg);
+    }
+    .hero-img { width: 100%; height: 300px; object-fit: cover; }
+    .items-section {
+      padding: 0 1rem;
+    }
+    .section-title { font-size: 1.5rem; font-weight: 700; margin: 1.5rem 0 1rem; color: var(--text-dark); }
+    .items-list { display: flex; flex-direction: column; gap: 1rem; }
     .item-card {
-      background: var(--card-white); border-radius: var(--radius-lg); overflow: hidden;
-      box-shadow: var(--shadow); border: 1px solid var(--border-light);
-      display: flex; align-items: center; padding: 1rem; gap: 1rem;
-      transition: var(--transition); height: 160px; position: relative; user-select: none;
-      touch-action: pan-y; /* Prevents shaking - allows vertical scroll */
+      background: var(--card-bg); border-radius: var(--radius-lg); padding: 1rem; box-shadow: var(--shadow-sm);
+      display: flex; align-items: center; gap: 1rem; position: relative;
     }
-    .item-card:hover { transform: translateY(-4px); }
-    .item-img { 
-      width: 120px; height: 120px; object-fit: cover; border-radius: var(--radius-lg); flex-shrink: 0; 
-      align-self: center; /* Centers image vertically */
+    .item-img { width: 90px; height: 90px; object-fit: cover; border-radius: var(--radius-md); }
+    .item-info { flex: 1; }
+    .item-name { font-weight: 600; font-size: 1.1rem; margin-bottom: 0.3rem; line-height: 1.3; }
+    .price-per { font-size: 0.9rem; color: var(--text-muted); margin-bottom: 0.8rem; }
+    .quantity-controls {
+      display: flex; align-items: center; gap: 1rem;
     }
-    .item-info { 
-      flex: 1; display: flex; flex-direction: column; gap: 0.6rem; min-width: 0; 
-      justify-content: center; /* Centers content vertically */
+    .qty-btn {
+      width: 36px; height: 36px; border-radius: 50%; background: #f1f1f1; border: none;
+      font-size: 1.3rem; display: grid; place-items: center; cursor: pointer;
     }
-    .item-name { 
-      font-weight: 700; font-size: 1rem; line-height: 1.3; 
-      word-break: break-word; overflow-wrap: anywhere; color: var(--text-dark);
+    .qty-number { font-size: 1.2rem; font-weight: 700; min-width: 40px; text-align: center; }
+    .item-total { font-size: 1.4rem; font-weight: 800; color: var(--text-dark); }
+    .remove-btn {
+      font-size: 1.3rem; color: var(--text-muted); cursor: pointer; position: absolute; top: 1rem; right: 1rem;
     }
-    .price-container { text-align: right; align-self: center; }
-    .new-price { font-weight: 900; color: var(--brand-red); font-size: 1.5rem; }
-    .old-price { font-size: 0.95rem; color: var(--muted-text); text-decoration: line-through; }
-    .discount-badge { 
-      background: var(--brand-red); color: white; font-size: 0.75rem; font-weight: 700;
-      padding: 0.25rem 0.5rem; border-radius: 0.5rem; display: inline-block; margin-top: 0.25rem; 
+    .cart-bar {
+      position: fixed; bottom: 0; left: 0; right: 0; background: white;
+      padding: 1rem; box-shadow: 0 -4px 20px rgba(0,0,0,0.1); border-top-left-radius: var(--radius-lg);
+      border-top-right-radius: var(--radius-lg);
     }
-    .quantity {
-      position: absolute; bottom: 1rem; right: 1rem; /* Moved to bottom-right */
-      background: var(--accent-green); color: white;
-      width: 44px; height: 44px; border-radius: 50%; 
-      display: grid; place-items: center; font-weight: 800; font-size: 1.1rem;
-      box-shadow: 0 4px 12px rgba(48,188,26,0.4);
+    .total-row {
+      display: flex; justify-content: space-between; margin-bottom: 1rem;
     }
-    .cart-bar { position: fixed; left: 50%; transform: translateX(-50%); bottom: 2rem;
-      width: calc(100% - 3rem); max-width: 28rem; padding: 0.875rem 1.25rem;
-      background: rgba(255,255,255,0.9); backdrop-filter: blur(14px); border-radius: var(--radius-xl);
-      box-shadow: var(--shadow); border: 1px solid rgba(255,255,255,0.5);
-      display: flex; align-items: center; justify-content: space-between; z-index: 70; cursor: pointer; }
-    .checkout-btn { background: linear-gradient(45deg, var(--brand-yellow), #ffd688); color: #000;
-      border: none; padding: 0.75rem 1.25rem; border-radius: var(--radius-lg); font-weight: 900;
-      cursor: pointer; box-shadow: 0 4px 10px rgba(255,177,42,0.3); transition: transform var(--transition); }
-    .checkout-btn:hover { transform: translateY(-3px); }
-    .login-banner { max-width: 75rem; margin: 1.5rem auto; padding: 1rem 1.5rem; border-radius: var(--radius-xl);
-      background: rgba(255,255,255,0.9); backdrop-filter: blur(10px); box-shadow: var(--shadow); text-align: center; font-weight: 600; }
+    .total-label { font-size: 1.1rem; }
+    .total-amount { font-size: 1.6rem; font-weight: 800; }
+    .checkout-btn {
+      background: var(--brand-yellow); color: black; border: none; width: 100%;
+      padding: 1rem; border-radius: 50px; font-size: 1.2rem; font-weight: 900; cursor: pointer;
+      box-shadow: 0 6px 16px rgba(255,199,7,0.3);
+    }
+    .empty-message { text-align: center; padding: 3rem; color: var(--text-muted); font-size: 1.1rem; }
     @media (max-width: 480px) {
-      .item-card { height: 150px; }
-      .item-img { width: 100px; height: 100px; }
-      .new-price { font-size: 1.4rem; }
-      .quantity { width: 40px; height: 40px; font-size: 1rem; }
+      .shop-title { font-size: 1.8rem; }
+      .hero-img { height: 250px; }
+      .item-card { padding: 0.8rem; }
+      .item-img { width: 80px; height: 80px; }
     }
   </style>
 </head>
 <body>
-  <header role="banner">
-    <div class="brand" style="flex:1">
-      <button class="back-btn" id="backBtn"><i class="fas fa-arrow-left"></i></button>
-      <div style="margin-left:8px">
-        <div class="title"><span style="color:#f4ff2a">Chat</span>Point</div>
-        <div style="font-size:12px;color:#fff8">Sindagi • Food Delivery</div>
+  <header>
+    <div class="header-top">
+      <button class="back-btn" id="backBtn">←</button>
+      <div class="icons">
+        <i class="icon-btn fas fa-search"></i>
+        <i class="icon-btn fas fa-shopping-bag"></i>
       </div>
     </div>
-    <div class="shop-name" id="shopName">Loading...</div>
+    <div class="shop-title" id="shopName">Loading...</div>
   </header>
 
-  <main>
-    <div id="loginBanner" class="login-banner" style="display:none;">
-      Please <a href="login.html">login</a> to add items to cart.
-    </div>
-    <section class="items-grid" id="itemsGrid"></section>
-  </main>
+  <div class="hero-container">
+    <img id="heroImage" src="" alt="Shop Hero" class="hero-img">
+  </div>
 
-  <div class="cart-bar" id="cartBar" style="display:none">
-    <div class="cart-info">
-      <div class="main" id="cartText">0 items · ₹0</div>
-      <div class="sub">Tap to view cart</div>
+  <section class="items-section">
+    <h2 class="section-title">Our Popular Items</h2>
+    <div class="items-list" id="itemsGrid"></div>
+  </section>
+
+  <div class="cart-bar" id="cartBar" style="display:none;">
+    <div class="total-row">
+      <span class="total-label">Total</span>
+      <span class="total-amount" id="cartTotal">₹0</span>
     </div>
-    <button class="checkout-btn" id="checkoutBtn">Checkout</button>
+    <button class="checkout-btn" id="checkoutBtn">Checkout →</button>
   </div>
 
   <script>
-    // Full JS with all items
-
+    // Login check
     const user = JSON.parse(localStorage.getItem("chatpoint_user") || "null");
     const isLoggedIn = user && user._id;
-    if (!isLoggedIn) {
-      document.getElementById("loginBanner").style.display = "block";
-    }
 
+    // ₹5 discount
     const DISCOUNT = 5;
 
+    // Hero images for each shop
+    const heroImages = {
+      "Chat Point": "https://images.unsplash.com/photo-1607013251379-e6eecfffe234?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80",
+      "Sangambar Udupi Hotel": "https://images.unsplash.com/photo-1631518739571-821f9d2e1256?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80",
+      "Nandi Grand Hotels": "https://images.unsplash.com/photo-1555939594-58d7cb561ad1?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80",
+      "Pizza Spot": "https://images.pexels.com/photos/905847/pexels-photo-905847.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
+      "Fly Pizza": "https://images.pexels.com/photos/315755/pexels-photo-315755.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
+      "Mister Chef": "https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80",
+      "Hasanamba Iyengar Bakery": "https://images.unsplash.com/photo-1558326567-7d2f25e34b3f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80",
+      "Dolphin Hotel": "https://images.unsplash.com/photo-1593253784648-f79b5c6ab968?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80"
+    };
+
+    // ALL ITEMS FROM ALL SHOPS
     const shopData = {
       "Chat Point": [
         { name: "Akoo tikki(burger)+ onion pizza + cheese sandwich + fry momos", price: 300, image: "Aloo-Tikki-Burger.jpg" },
@@ -257,6 +266,7 @@
       ]
     };
 
+    // Get shop from URL
     const urlParams = new URLSearchParams(location.search);
     let requestedShop = decodeURIComponent(urlParams.get("shop") || "").trim();
 
@@ -272,6 +282,9 @@
       }
     }
 
+    document.getElementById("shopName").textContent = shopName || "Shop Not Found";
+    document.getElementById("heroImage").src = heroImages[shopName] || "https://via.placeholder.com/1200x300?text=Delicious+Food";
+
     let cart = JSON.parse(localStorage.getItem("chatpoint_cart") || "{}");
 
     function saveCart() {
@@ -280,15 +293,14 @@
     }
 
     function updateCartBar() {
-      let items = 0, total = 0;
+      let total = 0;
       for (const s in cart) {
         for (const i in cart[s]) {
-          items += cart[s][i].qty;
           total += cart[s][i].qty * cart[s][i].price;
         }
       }
-      document.getElementById("cartText").textContent = `${items} items · ₹${total}`;
-      document.getElementById("cartBar").style.display = items > 0 ? "flex" : "none";
+      document.getElementById("cartTotal").textContent = `₹${total}`;
+      document.getElementById("cartBar").style.display = total > 0 ? "block" : "none";
     }
 
     function changeQty(shop, name, originalPrice, delta) {
@@ -297,9 +309,7 @@
         return;
       }
       if (!cart[shop]) cart[shop] = {};
-      if (!cart[shop][name]) {
-        cart[shop][name] = { qty: 0, price: originalPrice - DISCOUNT };
-      }
+      if (!cart[shop][name]) cart[shop][name] = { qty: 0, price: originalPrice - DISCOUNT };
       cart[shop][name].qty = Math.max(0, cart[shop][name].qty + delta);
       if (cart[shop][name].qty === 0) delete cart[shop][name];
       if (Object.keys(cart[shop]).length === 0) delete cart[shop];
@@ -308,10 +318,10 @@
     }
 
     function renderItems() {
-      const grid = document.getElementById("itemsGrid");
-      grid.innerHTML = "";
+      const container = document.getElementById("itemsGrid");
+      container.innerHTML = "";
       if (shopItems.length === 0) {
-        grid.innerHTML = "<p style='text-align:center;grid-column:1/-1;font-size:1.2rem;color:#666;margin:3rem 0;'>No items found for this shop.</p>";
+        container.innerHTML = "<div class='empty-message'>No items available</div>";
         return;
       }
 
@@ -319,69 +329,34 @@
         const originalPrice = item.price;
         const discountedPrice = originalPrice - DISCOUNT;
         const qty = (cart[shopName] && cart[shopName][item.name]) ? cart[shopName][item.name].qty : 0;
+        const total = qty * discountedPrice;
 
-        const card = document.createElement("article");
-        card.className = "item-card";
-
-        card.innerHTML = `
+        const div = document.createElement("div");
+        div.className = "item-card";
+        div.innerHTML = `
+          <img src="images/${item.image}" alt="${item.name}" class="item-img" 
+               onerror="this.src='https://via.placeholder.com/90?text=Food'">
           <div class="item-info">
             <div class="item-name">${item.name}</div>
+            <div class="price-per">Price Per 1: ₹${discountedPrice}</div>
+            <div class="quantity-controls">
+              <button class="qty-btn" onclick="changeQty('${shopName}', '${item.name.replace(/'/g, "\\'")}', ${originalPrice}, -1)">−</button>
+              <div class="qty-number">${qty}</div>
+              <button class="qty-btn" onclick="changeQty('${shopName}', '${item.name.replace(/'/g, "\\'")}', ${originalPrice}, 1)">+</button>
+            </div>
+            <div class="item-total">₹${total}</div>
           </div>
-          <div class="price-container">
-            <img src="images/${item.image}" alt="${item.name}" class="item-img" loading="lazy"
-                 onerror="this.src='https://via.placeholder.com/120x120/f3cd98/f12916?text=${encodeURIComponent(item.name.substring(0, 12))}'">
-            <div class="new-price">₹${discountedPrice}</div>
-            <div class="old-price">₹${originalPrice}</div>
-            <div class="discount-badge">-₹5 OFF</div>
-          </div>
-          <div class="quantity" style="display: ${qty > 0 ? 'grid' : 'none'};">
-            ${qty}
-          </div>
+          <i class="fas fa-trash remove-btn" onclick="changeQty('${shopName}', '${item.name.replace(/'/g, "\\'")}', ${originalPrice}, -qty)"></i>
         `;
-
-        // Swipe functionality - fixed shaking
-        let startX = 0;
-        let isDragging = false;
-
-        card.addEventListener("touchstart", e => {
-          startX = e.touches[0].clientX;
-          isDragging = true;
-          card.style.transition = "none";
-        }, { passive: true });
-
-        card.addEventListener("touchmove", e => {
-          if (!isDragging) return;
-          e.preventDefault(); // Only prevent when swiping horizontally
-          const diffX = e.touches[0].clientX - startX;
-          card.style.transform = `translateX(${diffX}px)`;
-        }, { passive: false });
-
-        card.addEventListener("touchend", () => {
-          if (!isDragging) return;
-          const diffX = parseFloat(card.style.transform.match(/translateX\((.*)px\)/)?.[1] || 0);
-          card.style.transition = "transform 0.3s ease";
-
-          if (diffX > 60) {
-            changeQty(shopName, item.name, originalPrice, 1);
-          } else if (diffX < -60) {
-            changeQty(shopName, item.name, originalPrice, -1);
-          }
-
-          card.style.transform = "translateX(0)";
-          isDragging = false;
-        });
-
-        grid.appendChild(card);
+        container.appendChild(div);
       });
     }
 
-    document.getElementById("shopName").textContent = shopName || "Shop Not Found";
     renderItems();
     updateCartBar();
 
     document.getElementById("backBtn").onclick = () => history.back();
-    document.getElementById("cartBar").onclick = () => location.href = "cart.html";
-    document.getElementById("checkoutBtn").onclick = e => { e.stopPropagation(); location.href = "cart.html"; };
+    document.getElementById("checkoutBtn").onclick = () => location.href = "cart.html";
   </script>
 </body>
 </html>
