--- a/items.html
+++ b/items.html
@@ -185,12 +185,12 @@
         { name: "Aloo Tikki Burger", price: 85, image: "Aloo-Tikki-Burger.jpg" },
         { name: "Paneer Burger", price: 95, image: "Paneer-Burger.jpg" },
         { name: "Double Decker Burger", price: 125, image: "Double-Decker-Burger.jpg" },
-        { name: "Pizza Spot Special Burger", price: 165, image: "Pizza-Spot-Special-Burger.jpg" },
-        { name: "Margherita", price: 154, image: "Margherita.jpg" },
-        { name: "Veggie", price: 174, image: "Veggie.jpg" },
+        { name: "Pizza Spot Special Burger", price: 355, image: "Pizza-Spot-Special-Burger.jpg" },
+        { name: "Margherita", price: 164, image: "Margherita.jpg" },
+        { name: "Veggie", price: 177, image: "Veggie.jpg" },
         { name: "Veggie Lover", price: 274, image: "Veggie-Lover.jpg" },
         { name: "Sweet Corn", price: 245, image: "Sweet-Corn.jpg" },
-        { name: "Baby Corn", price: 224, image: "Baby-Corn.jpg" },
+        { name: "Baby Corn", price: 235, image: "Baby-Corn.jpg" },
         { name: "Tandoori Paneer", price: 235, image: "Tandoori-Paneer.jpg" },
         { name: "Steam Momos", price: 75, image: "Steam-Momos.jpg" },
         { name: "Fried Momos", price: 85, image: "Fried-Momos.jpg" },
@@ -201,19 +201,19 @@
         { name: "Paneer Tandoori Sandwich", price: 95, image: "Paneer-Tandoori-Sandwich.jpg" },
         { name: "Club Sandwich", price: 125, image: "Club-Sandwich.jpg" },
         { name: "Pizza Spot Special Sandwich", price: 145, image: "Pizza-Spot-Special-Sandwich.jpg" },
-        { name: "Pav Bhaji", price: 65, image: "Pav-Bhaji.jpg" },
-        { name: "Cheese Pav Bhaji", price: 85, image: "Cheese-Pav-Bhaji.jpg" },
-        { name: "Veg Roll", price: 75, image: "Veg-Roll.jpg" },
-        { name: "Sweet Corn Roll", price: 95, image: "Sweet-Corn-Roll.jpg" },
+        { name: "Pav Bhaji", price: 67, image: "Pav-Bhaji.jpg" },
+        { name: "Cheese Pav Bhaji", price: 87, image: "Cheese-Pav-Bhaji.jpg" },
+        { name: "Veg Roll", price: 77, image: "Veg-Roll.jpg" },
+        { name: "Sweet Corn Roll", price: 97, image: "Sweet-Corn-Roll.jpg" },
         { name: "Paneer Roll", price: 105, image: "Paneer-Roll.jpg" }
       ],
-      "Fly Pizza": [
+      "connect with pizza": [
         { name: "Margharita pizza", price: 155, image: "Margherita.jpg" },
         { name: "Corn cheese", price: 179, image: "Sweet-Corn.jpg" },
         { name: "Corn cheese big", price: 339, image: "Sweet-Corn.jpg" },
         { name: "paneer Tikka", price: 269, image: "Tandoori-Paneer.jpg" },
         { name: "Veggie lovers", price: 279, image: "Veggie-Lover.jpg" },
-        { name: "Fly special", price: 360, image: "Pizza-Spot-Special.jpg" }
+        { name: "special pizza", price: 360, image: "Pizza-Spot-Special.jpg" }
       ],
       "Mister Chef": [
         { name: "VEG-Sandwiich", price: 60, image: "VEG-Sandwiich.jpg" },
