--- a/items.html
+++ b/items.html
@@ -141,6 +141,7 @@
       "Chat Point": [
         { name: "Akoo tikki(burger)+ onion pizza + cheese sandwich + fry momos", price: 300, image: "Aloo-Tikki-Burger.jpg" },
         { name: "Veg roll + paneer puff + veg sandwich + Paneer burger + 750ml water bottel", price: 229, image: "Paneer-Burger.jpg" },
+        { name: "2 cake roll + chocolate bun + honey cake (1p) + 2 egg/veg puff + 250 coca cola ", price: 145, image: "combo.JPG" },
         { name: "veggiee pizza + French fries + coca cola 250ml", price: 279, image: "Veggie-Lover.jpg" },
         { name: "Jeera rice", price: 159, image: "Jeera-Rice.jpg" },
         { name: "veg biryani + 750ml water botel", price: 189, image: "Veg-Biriyani.jpg" },
@@ -153,10 +154,6 @@
         { name: "Benne Masala Dosa", price: 115, image: "Benne-Masala-Dosa.jpg" },
         { name: "Mysore Masala Dosa", price: 115, image: "Mysore-Masala-Dosa.jpg" },
         { name: "Paneer Masala Dosa", price: 115, image: "Paneer-Masala-Dosa.jpg" },
-        { name: "Tomato Soup", price: 105, image: "Tomato-Soup.jpg" },
-        { name: "Sweet Corn Soup", price: 95, image: "Sweet-Corn-Soup.jpg" },
-        { name: "Veg Clear Soup", price: 95, image: "Veg-Clear-Soup.jpg" },
-        { name: "Hot and Sour Soup", price: 105, image: "Hot-and-Sour-Soup.jpg" },
         { name: "Gobi 65", price: 135, image: "Gobi-65.jpg" },
         { name: "Gobi Manchurian", price: 125, image: "Gobi-Manchurian.jpg" },
         { name: "Mushroom Manchurian", price: 185, image: "Mushroom-Manchurian.jpg" },
@@ -244,9 +241,6 @@
         { name: "Paneer Tandoori Burger", price: 85, image: "Paneer-Burger.jpg" },
         { name: "Cheese Sandwich", price: 75, image: "Cheese-Sandwich.jpg" },
         { name: "Veg Sandwich", price: 66, image: "Veg-Sandwich.jpg" },
-        { name: "Veg Roll", price: 35, image: "Veg-Roll.jpg" },
-        { name: "Egg Roll", price: 35, image: "Egg-Roll.jpg" },
-        { name: "Cheese Roll", price: 40, image: "Cheese-Roll.jpg" },
         { name: "Rasmalai Cake", price: 750, image: "Rasmalai-Cake.jpg" },
         { name: "Irish Coffee Cake", price: 750, image: "Irish-Coffee-Cake.jpg" },
         { name: "Black Forest Cake", price: 650, image: "Black-Forest.jpg" },
